--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="pomodoro.js"></script>
+		<script src="media/js/pomodoro.js"></script>
 
 	</head>
 	<body>
