Add buttons to change requested time the substracting one is working with a function

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	</head>
 	<body>
 		<h1>FreeCodeCamp</h1>
+		<button id="lessmin">-</button>
+		<button id="moremin">+</button>
+		
 		<button id="startButton">Start</button>
 		<div id="timeDisplay"></div>
-		<div id="message"></div>
+		<div id="message"></div>	
 	</body>
 </html>
 
