Buttons for + or - min it works when the timer is running

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <html>
 	<head>
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="media/css/pomodoro.css">
+		
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="media/js/pomodoro.js"></script>
 
 	</head>
 	<body>
 		<h1>FreeCodeCamp</h1>
-		<button id="lessmin">-</button>
-		<button id="moremin">+</button>
+		<p >
+		<button id="lessmin" class:" btn btn-primary">min-</button>
+		<button id="moremin">min+</button>
 		
 		<button id="startButton">Start</button>
+		</p>
 		<div id="timeDisplay"></div>
 		<div id="message"></div>	
 	</body>
