CSS changes, add pause, button and msg change depending the state

--- a/index.html
+++ b/index.html
@@ -2,24 +2,35 @@
 	<head>
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="media/css/pomodoro.css">
-		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+			
+			<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		
+		<link href='https://fonts.googleapis.com/css?family=Montserrat|Poiret+One|Quicksand|Chelsea+Market' rel='stylesheet' type='text/css'>
+
+		
 		<script src="media/js/pomodoro.js"></script>
+
 
 	</head>
 	<body>
+	  <div class="content">
 		<h1>FreeCodeCamp</h1>
-		<p >
-		<button id="lessmin" class:" btn btn-primary">min-</button>
-		<button id="moremin">min+</button>
+		<p class="mybuttons " >
+		<button id="lessmin" class=" btn btn-default">min-</button>
+		<button id="moremin" class=" btn btn-default">min+</button>
 		
-		<button id="startButton">Start</button>
+		<button id="startButton" class=" btn btn-default">Start</button>
 		</p>
 		<div id="timeDisplay"></div>
 		<div id="message"></div>	
+	  </div>
 	</body>
 </html>
 
